2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (pk_map_add_entry): Get both name and varname as
	arguments.
	(pk_map_load_parsed_map): Adjust call accordingly.
	* poke/pk-cmd-map.c (pk_cmd_map_entry_add): LIkewise.
	(pk_cmd_map_show): Do now show a Variable column.
	* testsuite/poke.cmd/maps-4.pk: Adapt accordingly.
	* testsuite/poke.cmd/maps-5.pk: Likewise.
	* testsuite/poke.cmd/maps-6.pk: Likewise.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.c (pkl_lexical_cuckolding_p): Define.
	(pkl_set_lexical_cuckolding_p): Likewise.
	(pkl_set_alien_token_fn): Likewise.
	(pkl_alien_token_fn): Likewise.
	(struct pkl_compiler): New fields `lexical_cuckolding_p' and
	`alien_token_fn'.
	* libpoke/libpoke.c (pk_set_lexical_cuckolding_p): Define.
	(pk_set_alien_token_fn): Likewise.
	* poke/pk-cmd.c (pk_cmd_exec): Activate the lexical cuckolding
	when executing Poke code in the REPL.
	* poke/pk-map.c (pk_map_alien_token_handler): Define.
	(pk_map_init): Install pk_map_alien_token_handler in
	poke_compiler.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* maps/mp3.map: Fix tag.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.h (struct pk_map): New field `id'.
	(struct pk_map_entry): New field `name'.
	(PK_MAP_ENTRY_NAME): Define.
	* poke/pk-map.c (next_map_id): New variable.
	(pk_map_create): Allocate a new map ID and initialize the new map
	with it.
	(search_map_entry): Search entries by name, not varnames.
	(pk_map_add_entry): Initialize the map entry name.
	(entry_name_to_varname): New function.
	(pk_map_remove_entry): Delete by entry name, not variable name.
	* testsuite/poke.cmd/maps-4.pk: Adapt.
	* testsuite/poke.cmd/maps-5.pk: Likewise.
	* testsuite/poke.cmd/maps-6.pk: Likewise.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (pk_map_load_file): Make sure a map is not already
	loaded with the same name.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>
